--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   twitter: itx-ri # twitter username
   #facebook: facebook_username # facebook username
   email: rimiqbal777@gmail.com # email adress
-  avatar: /assets/img/avatar.jpg # change with your own avatar
+  avatar: /assets/img/avataaars.png # change with your own avatar
 
 # URL settings
 url: "https://klise.now.sh" #
