--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Rimsha Iqbal # author name
   bio: >- # tell to the world
-    The minimalist Jekyll theme, light and dark mode support, for running a personal site and blog, 
-    meet Klisé theme at <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
+    Este blog celebra algunas de las festividades más importantes del mundo, como Eid ul-Fitr, Eid ul-Adha, Ramadán, Navidad y Holi. 
+    Descubre los significados, tradiciones y rituales detrás de cada festividad y cómo se celebran alrededor del mundo. 
+    Explora más sobre las festividades en <a href="https://jekyll-klise-rimsha.netlify.app/" target="_blank" rel="noopener">@GitHub</a>.
   username: "Rimsha Iqbal" # general username
   github: Rimsha-Iqbal # github username
   twitter: itx-ri # twitter username
